--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -3,8 +3,18 @@
 .form {
   display: flex;
   flex-direction: column;
-  align-items: center;
   row-gap: 5px;
+
+  div {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2px;
+  }
+
+  p {
+    font-size: 12px;
+    color: red;
+  }
 
   input,
   textarea {
@@ -18,19 +28,18 @@
   button {
     width: 250px;
     height: 29px;
+
+    margin: 0 auto;
   }
 }
 
 @media (max-width: $tablet) {
   .form {
     width: 100%;
-    div {
-      width: 100%;
 
-      input,
-      textarea {
-        width: calc(100% - 10px);
-      }
+    input,
+    textarea {
+      width: calc(100% - 10px);
     }
 
     button {
